--- a/capstone-socials/client/src/index.css
+++ b/capstone-socials/client/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+	@apply bg-neutral-900 text-white;
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+	opacity: 0;
+}
